Fix overflow: hidden

--- a/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
+++ b/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
@@ -5,6 +5,7 @@
   padding-top: var(--base-size-8);
   justify-content: space-between;
   align-items: flex-start;
+  overflow: hidden;
   /* stylelint-disable-next-line declaration-property-value-no-unknown */
   container: underline-wrapper / scroll-state;
 
@@ -14,14 +15,6 @@
   /* using a box-shadow instead of a border to accommodate 'overflow-y: hidden' on UnderlinePanels */
   /* stylelint-disable-next-line primer/box-shadow */
   box-shadow: inset 0 -1px var(--borderColor-muted);
-
-  &[data-overflow-measured='false'] {
-    overflow: hidden;
-  }
-
-  &[data-overflow-measured='true'] {
-    overflow: visible;
-  }
 
   &[data-variant='flush'] {
     /* stylelint-disable-next-line primer/spacing */
